teszt komponensek létrehozva

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+.container {
+  display: grid;
+  height: 100vh;
+  margin: auto;
+  padding: 16px;
+  gap: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media (max-width: 720px) {
+  .container {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, 2fr);
+    grid-template-areas:
+      'nav'
+      'sidebar'
+      'content1'
+      'content2'
+      'content3'
+      'bigcontent';
+  }
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (min-width: 720px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 2fr);
+    grid-template-areas:
+      'nav nav'
+      'sidebar sidebar'
+      'content1 content2'
+      'content3 .'
+      'bigcontent bigcontent';
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media (min-width: 1024px) {
+  .container {
+    max-width: 90%;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 1fr 2fr;
+    grid-template-areas:
+      'nav nav nav nav'
+      'sidebar content1 content2 content3'
+      'sidebar bigcontent bigcontent bigcontent';
+  }
 }
 
-.App-link {
-  color: #61dafb;
+nav {
+  background: #61dafb;
+  grid-area: nav;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#sidebar {
+  background: #61fffb;
+  grid-area: sidebar;
+}
+
+#bigcontent {
+  background: #0099ff;
+  grid-area: bigcontent;
+}
+
+#content1 {
+  background: bisque;
+  grid-area: content1;
+}
+
+#content2 {
+  background: bisque;
+  grid-area: content2;
+}
+
+#content3 {
+  background: bisque;
+  grid-area: content3;
 }
