--- a/src/App.css
+++ b/src/App.css
@@ -9,25 +9,22 @@
 @media (max-width: 720px) {
   .container {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(6, 2fr);
+    grid-template-rows: repeat(4, 2fr);
     grid-template-areas:
       'nav'
       'sidebar'
-      'content1'
-      'content2'
-      'content3'
+      'smallcontent'
       'bigcontent';
   }
 }
 @media (min-width: 720px) {
   .container {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, 2fr);
+    grid-template-rows: repeat(4, 2fr);
     grid-template-areas:
       'nav nav'
       'sidebar sidebar'
-      'content1 content2'
-      'content3 .'
+      'smallcontent smallcontent'
       'bigcontent bigcontent';
   }
 }
@@ -39,7 +36,7 @@
     grid-template-rows: 1fr 1fr 2fr;
     grid-template-areas:
       'nav nav nav nav'
-      'sidebar content1 content2 content3'
+      'sidebar smallcontent smallcontent smallcontent'
       'sidebar bigcontent bigcontent bigcontent';
   }
 }
@@ -58,6 +55,20 @@ nav {
   background: #0099ff;
   grid-area: bigcontent;
 }
+#smallcontent {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  grid-gap: 1rem;
+  background: #00bbff;
+  grid-area: smallcontent;
+}
+
+.card {
+  border: 2px solid #e7e7e7;
+  border-radius: 4px;
+  padding: 0.5rem;
+}
 
 #content1 {
   background: bisque;
@@ -72,4 +83,8 @@ nav {
 #content3 {
   background: bisque;
   grid-area: content3;
+}
+
+.item1 {
+  grid-column: 1 / span 3;
 }
