--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   height: 100vh;
   margin: auto;
   padding: 16px;
-  gap: 15px;
+  gap: 24px;
 }
 
 @media (max-width: 720px) {
@@ -13,7 +13,7 @@
     grid-template-areas:
       'nav'
       'sidebar'
-      'smallcontent'
+      'card-container'
       'bigcontent';
   }
 }
@@ -24,7 +24,7 @@
     grid-template-areas:
       'nav nav'
       'sidebar sidebar'
-      'smallcontent smallcontent'
+      'card-container card-container'
       'bigcontent bigcontent';
   }
 }
@@ -36,7 +36,7 @@
     grid-template-rows: 1fr 1fr 2fr;
     grid-template-areas:
       'nav nav nav nav'
-      'sidebar smallcontent smallcontent smallcontent'
+      'sidebar card-container card-container card-container'
       'sidebar bigcontent bigcontent bigcontent';
   }
 }
@@ -56,19 +56,27 @@ nav {
   background: #0099ff;
   grid-area: bigcontent;
 }
-#smallcontent {
+#card-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: auto;
-  grid-gap: 1rem;
-  background: #00bbff;
-  grid-area: smallcontent;
+  grid-gap: 1.5rem;
+  grid-area: card-container;
 }
 
 .card {
-  border: 2px solid #e7e7e7;
-  border-radius: 4px;
-  padding: 0.5rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  /*border-radius: 10px; /* 5px rounded corners */
+  align-items: center;
+}
+
+.card-image {
+  display: block;
+  margin: auto;
+  width: 100%;
+  height: auto;
+  /*border-radius: 10px;*/
 }
 
 #content1 {
