--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,9 @@
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, 2fr);
     grid-template-areas:
-      'nav'
-      'sidebar'
-      'card-container'
+      'header'
+      'content'
+      'content'
       'bigcontent';
   }
 }
@@ -22,9 +22,9 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 2fr);
     grid-template-areas:
-      'nav nav'
-      'sidebar sidebar'
-      'card-container card-container'
+      'header header'
+      'content content'
+      'content content'
       'bigcontent bigcontent';
   }
 }
@@ -35,16 +35,25 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr 1fr 2fr;
     grid-template-areas:
-      'nav nav nav nav'
-      'sidebar card-container card-container card-container'
-      'sidebar bigcontent bigcontent bigcontent';
+      'header header header header'
+      'sidebar content content content ';
   }
 }
 
-nav {
+.header {
+  display: block;
   background: #61dafb;
-  grid-area: nav;
-  min-height: 120px;
+  grid-area: header;
+  height: 130px;
+  min-width: 90vw;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: auto;
+  grid-gap: 1.5rem;
+  grid-area: content;
 }
 
 .raise:hover,
@@ -61,13 +70,6 @@ nav {
 #bigcontent {
   background: #0099ff;
   grid-area: bigcontent;
-}
-#card-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: auto;
-  grid-gap: 1.5rem;
-  grid-area: card-container;
 }
 
 .card {
